--- a/ElectronicDiary/MainWindow.xaml
+++ b/ElectronicDiary/MainWindow.xaml
@@ -1,11 +1,34 @@
-﻿<Window x:Class="ElectronicDiary.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Electronic diary - Administrator panel" Height="377.989" Width="525">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="ElectronicDiary.MainWindow"
+        Title="Electronic diary" Height="483.052" Width="972.662">
     <Grid>
-        <Button Content="Teachers" HorizontalAlignment="Left" Margin="10,44,0,0" VerticalAlignment="Top" Width="185" Height="33"/>
-        <Button Content="Students" HorizontalAlignment="Left" Margin="10,98,0,0" VerticalAlignment="Top" Width="185" Height="33"/>
-        <Button Content="Lessons" HorizontalAlignment="Left" Margin="10,154,0,0" VerticalAlignment="Top" Width="185" Height="33"/>
-        <Button Content="Schedules" HorizontalAlignment="Left" Margin="10,205,0,0" VerticalAlignment="Top" Width="185" Height="33"/>
+        <Grid x:Name="Admin" HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="100" d:IsHidden="True">
+            <Button Content="Schedules" HorizontalAlignment="Left" Margin="10,205,-95,-138" VerticalAlignment="Top" Width="185" Height="33"/>
+            <Button Content="Lessons" HorizontalAlignment="Left" Margin="10,154,-95,-87" VerticalAlignment="Top" Width="185" Height="33"/>
+            <Button Content="Teachers" HorizontalAlignment="Left" Margin="10,44,-95,0" VerticalAlignment="Top" Width="185" Height="33"/>
+            <Button Content="Students" HorizontalAlignment="Left" Margin="10,98,-95,-31" VerticalAlignment="Top" Width="185" Height="33"/>
+        </Grid>
+        <Grid x:Name="Client" HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="100" d:IsHidden="True">
+            <Grid x:Name="Teacher" HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="100"/>
+            <Grid x:Name="Student" HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="100"/>
+        </Grid>
+        <Grid x:Name="Logining" Margin="0,0,-409,-83" d:IsHidden="True">
+
+            <TextBox x:Name="Login" HorizontalAlignment="Left" Height="30" Margin="459,129,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="152" TabIndex="1"/>
+            <Button Content="Войти" HorizontalAlignment="Left" Margin="415,240,0,0" VerticalAlignment="Top" Width="136" Height="45" FontSize="20"  TabIndex="3" Click="Entering"/>
+            <Label Content="Добро пожаловать" HorizontalAlignment="Left" Margin="306,38,0,0" VerticalAlignment="Top" Height="66" Width="364" TextOptions.TextFormattingMode="Display" FontFamily="Wide Latin" FontSize="38" FontStyle="Italic"/>
+            <Label Content="Login" HorizontalAlignment="Left" Margin="344,129,0,0" VerticalAlignment="Top" RenderTransformOrigin="-3.684,-0.231" FontSize="20" FontFamily="Cooper Black"/>
+            <Label Content="Password" HorizontalAlignment="Left" Margin="344,187,0,0" VerticalAlignment="Top" RenderTransformOrigin="-3.684,-0.231" FontSize="20" FontFamily="Cooper Black"/>
+            <Label Content="Не зарегестрированы?" HorizontalAlignment="Left" Margin="389,294,0,0" VerticalAlignment="Top" Width="196" FontSize="16"/>
+            <Button x:Name="Registr" Content="Регистрация" HorizontalAlignment="Left" Margin="430,331,0,0" VerticalAlignment="Top" Width="103" Height="42" TabIndex="4"/>
+            <PasswordBox x:Name="Password" HorizontalAlignment="Left" Margin="459,187,0,0" VerticalAlignment="Top" Width="152" Height="30" TabIndex="2"/>
+
+
+
+        </Grid>
+        <DataGrid HorizontalAlignment="Left" Margin="89,45,0,0" VerticalAlignment="Top" Height="316" Width="525"/>
+        <Calendar HorizontalAlignment="Left" Margin="631,59,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
