--- a/ElectronicDiary/MainWindow.xaml
+++ b/ElectronicDiary/MainWindow.xaml
@@ -4,14 +4,17 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="ElectronicDiary.MainWindow"
         Title="Electronic diary" Height="483.052" Width="972.662">
     <Grid>
-        <Grid x:Name="Admin" HorizontalAlignment="Left" Height="443" VerticalAlignment="Top" Width="955">
+        <Grid x:Name="Admin" HorizontalAlignment="Left" Height="443" VerticalAlignment="Top" Width="955" d:IsHidden="True">
             <ComboBox HorizontalAlignment="Left" Margin="759,25,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="0"/>
         </Grid>
-        <Grid x:Name="Client" HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="100" d:IsHidden="True">
+        <Grid x:Name="Client" HorizontalAlignment="Left" Height="453" VerticalAlignment="Top" Width="965">
             <Grid x:Name="Teacher" HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="100" d:IsHidden="True"/>
-            <Grid x:Name="Student" HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="100" d:IsHidden="True">
-                <DataGrid HorizontalAlignment="Left" Margin="89,45,-514,-261" VerticalAlignment="Top" Height="316" Width="525" d:IsHidden="True"/>
-                <Calendar HorizontalAlignment="Left" Margin="631,59,-710,-127" VerticalAlignment="Top" d:IsHidden="True"/>
+            <Grid x:Name="Student" HorizontalAlignment="Left" Height="452" VerticalAlignment="Top" Width="965" Margin="0,0,-865,-352">
+                <DataGrid x:Name="StudentDay" HorizontalAlignment="Left" Margin="89,45,-514,-261" VerticalAlignment="Top" Height="316" Width="525"/>
+                <Calendar x:Name="Calendar" HorizontalAlignment="Left" Margin="631,59,-710,-127" VerticalAlignment="Top" SelectedDatesChanged="ShowName"/>
+                <Label x:Name="StudentName" Content="" HorizontalAlignment="Left" Margin="702,6,0,0" VerticalAlignment="Top" Width="179"/>
+                <Button Content="Выход" HorizontalAlignment="Left" Margin="886,10,0,0" VerticalAlignment="Top" Width="69"/>
+                <ComboBox x:Name="StudentGroupList" HorizontalAlignment="Left" Margin="285,18,0,0" VerticalAlignment="Top" Width="120"/>
             </Grid>
         </Grid>
         <Grid x:Name="Logining" Margin="0,0,-409,-83" d:IsHidden="True">
