Added add/delete/remove student

--- a/ElectronicDiary/MainWindow.xaml
+++ b/ElectronicDiary/MainWindow.xaml
@@ -9,7 +9,7 @@
             <Label x:Name="UserName" Content="" Margin="655,6,0,0" VerticalAlignment="Top" Width="217" HorizontalAlignment="Left" HorizontalContentAlignment="Right"/>
         </Grid>
         <Label x:Name="StatusBar" Content="Administration panel" HorizontalAlignment="Left" Margin="0,421,0,0" VerticalAlignment="Top" Height="32" Width="945"/>
-        <Grid x:Name="Admin" HorizontalAlignment="Left" Height="443" VerticalAlignment="Top" Width="955" Margin="0,10,0,0" d:IsHidden="True">
+        <Grid x:Name="Admin" HorizontalAlignment="Left" Height="443" VerticalAlignment="Top" Width="955" Margin="0,10,0,0">
             <ComboBox x:Name="AdminComboBox" HorizontalAlignment="Left" Margin="684,48,0,0" VerticalAlignment="Top" Width="206" SelectedIndex="0" SelectionChanged="AdminComboBox_SelectionChanged"/>
             <DataGrid x:Name="AdminDataGrid" HorizontalAlignment="Left" Margin="26,48,0,0" VerticalAlignment="Top" Height="346" Width="562"/>
             <Label x:Name="AdminHeaderLabel" Content="Users" HorizontalAlignment="Left" Margin="276,10,0,0" VerticalAlignment="Top" FontSize="20"/>
@@ -59,33 +59,35 @@
                 <Label Content="Name:" HorizontalAlignment="Left" Margin="45,12,0,0" VerticalAlignment="Top"/>
                 <Label Content="Surname:" HorizontalAlignment="Left" Margin="30,55,0,0" VerticalAlignment="Top"/>
                 <Button x:Name="AdminPanelAddStudent" Content="Add" HorizontalAlignment="Left" Margin="195,227,0,0" VerticalAlignment="Top" Width="71" Height="24" Click="AdminPanelAddStudent_Click"/>
-                <TextBox x:Name="AdminStudentGroupTextBox" HorizontalAlignment="Left" Height="22" Margin="89,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
                 <Label Content="Group:" HorizontalAlignment="Left" Margin="43,101,0,0" VerticalAlignment="Top"/>
                 <TextBox x:Name="AdminStudentPassTextBox" HorizontalAlignment="Left" Height="22" Margin="89,186,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
                 <Label Content="Password:" HorizontalAlignment="Left" Margin="26,186,0,0" VerticalAlignment="Top"/>
                 <Label Content="Login:" HorizontalAlignment="Left" Margin="47,145,0,0" VerticalAlignment="Top"/>
                 <TextBox x:Name="AdminStudentLoginTextBox" HorizontalAlignment="Left" Height="22" Margin="89,145,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
                 <Button x:Name="AdminPanelBackStudent" Content="Back" HorizontalAlignment="Left" Margin="89,227,0,0" VerticalAlignment="Top" Width="71" Height="24" Click="AdminPanelBackStudent_Click"/>
+                <ComboBox x:Name="AdminStudentGroupCombobox" HorizontalAlignment="Left" Margin="89,101,0,0" VerticalAlignment="Top" Width="177"/>
             </Grid>
-            <Grid x:Name="AdminStudentsDelete" HorizontalAlignment="Left" Height="343" Margin="618,130,0,-30" VerticalAlignment="Top" Width="327" d:IsHidden="True">
+            <Grid x:Name="AdminStudentsDelete" HorizontalAlignment="Left" Height="343" Margin="618,130,0,-30" VerticalAlignment="Top" Width="327">
                 <Button x:Name="AdminPanelDelete" Content="Delete" HorizontalAlignment="Left" Margin="195,72,0,0" VerticalAlignment="Top" Width="71" Height="24" Click="AdminPanelDelete_Click"/>
                 <Label Content="Login:" HorizontalAlignment="Left" Margin="42,22,0,0" VerticalAlignment="Top"/>
-                <TextBox x:Name="AdminStudentLoginDeleteTextBox" HorizontalAlignment="Left" Height="22" Margin="89,26,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
                 <Button x:Name="AdminPanelBackDelete" Content="Back" HorizontalAlignment="Left" Margin="89,72,0,0" VerticalAlignment="Top" Width="71" Height="24" Click="AdminPanelBackDelete_Click"/>
+                <ComboBox x:Name="AdminStudentLoginDeleteCombobox" HorizontalAlignment="Left" Margin="89,26,0,0" VerticalAlignment="Top" Width="177"/>
             </Grid>
-            <Grid x:Name="AdminStudentsEdit" HorizontalAlignment="Left" Height="343" Margin="618,130,0,-30" VerticalAlignment="Top" Width="327" d:IsHidden="True">
-                <TextBox x:Name="AdminStudentNameEditTextBox" HorizontalAlignment="Left" Height="22" Margin="89,16,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
-                <TextBox x:Name="AdminStudentSurnameEditTextBox" HorizontalAlignment="Left" Height="22" Margin="89,59,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
-                <Label Content="Name:" HorizontalAlignment="Left" Margin="45,12,0,0" VerticalAlignment="Top"/>
-                <Label Content="Surname:" HorizontalAlignment="Left" Margin="30,55,0,0" VerticalAlignment="Top"/>
-                <Button x:Name="AdminPanelEditSave" Content="Save" HorizontalAlignment="Left" Margin="195,227,0,0" VerticalAlignment="Top" Width="71" Height="24" Click="AdminPanelEditSave_Click"/>
-                <TextBox x:Name="AdminStudentGroupEditTextBox" HorizontalAlignment="Left" Height="22" Margin="89,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
-                <Label Content="Group:" HorizontalAlignment="Left" Margin="43,101,0,0" VerticalAlignment="Top"/>
-                <TextBox x:Name="AdminStudentPassEditTextBox" HorizontalAlignment="Left" Height="22" Margin="89,186,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
-                <Label Content="Password:" HorizontalAlignment="Left" Margin="26,186,0,0" VerticalAlignment="Top"/>
-                <Label Content="Login:" HorizontalAlignment="Left" Margin="47,145,0,0" VerticalAlignment="Top"/>
-                <TextBox x:Name="AdminStudentLoginEditTextBox" HorizontalAlignment="Left" Height="22" Margin="89,145,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
-                <Button x:Name="AdminPanelEditBack" Content="Back" HorizontalAlignment="Left" Margin="87,227,0,0" VerticalAlignment="Top" Width="71" Height="24" Click="AdminPanelEditBack_Click"/>
+            <Grid x:Name="AdminStudentsEdit" HorizontalAlignment="Left" Height="343" Margin="618,85,0,0" VerticalAlignment="Top" Width="327" d:IsHidden="True">
+                <TextBox x:Name="AdminStudentNameEditTextBox" HorizontalAlignment="Left" Height="22" Margin="89,66,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
+                <TextBox x:Name="AdminStudentSurnameEditTextBox" HorizontalAlignment="Left" Height="22" Margin="89,109,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
+                <Label Content="Name:" HorizontalAlignment="Left" Margin="40,62,0,0" VerticalAlignment="Top"/>
+                <Label Content="Surname:" HorizontalAlignment="Left" Margin="30,105,0,0" VerticalAlignment="Top"/>
+                <Button x:Name="AdminPanelEditSave" Content="Save" HorizontalAlignment="Left" Margin="195,277,0,0" VerticalAlignment="Top" Width="71" Height="24" Click="AdminPanelEditSave_Click"/>
+                <Label Content="Group:" HorizontalAlignment="Left" Margin="43,152,0,0" VerticalAlignment="Top"/>
+                <TextBox x:Name="AdminStudentPassEditTextBox" HorizontalAlignment="Left" Height="22" Margin="89,236,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
+                <Label Content="Password:" HorizontalAlignment="Left" Margin="26,236,0,0" VerticalAlignment="Top"/>
+                <Label Content="Login:" HorizontalAlignment="Left" Margin="45,195,0,0" VerticalAlignment="Top"/>
+                <TextBox x:Name="AdminStudentLoginEditTextBox" HorizontalAlignment="Left" Height="22" Margin="89,195,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
+                <Button x:Name="AdminPanelEditBack" Content="Back" HorizontalAlignment="Left" Margin="89,277,0,0" VerticalAlignment="Top" Width="71" Height="24" Click="AdminPanelEditBack_Click"/>
+                <ComboBox x:Name="AdminStudentGroupEditCombobox" HorizontalAlignment="Left" Margin="89,152,0,0" VerticalAlignment="Top" Width="177"/>
+                <ComboBox x:Name="AdminStudentsIdCombobox" HorizontalAlignment="Left" Margin="89,28,0,0" VerticalAlignment="Top" Width="177" SelectionChanged="AdminStudentsIdCombobox_SelectionChanged"/>
+                <Label Content="Student Id:" HorizontalAlignment="Left" Margin="16,28,0,0" VerticalAlignment="Top"/>
             </Grid>
             <Grid x:Name="AdminSubjectsGrid" HorizontalAlignment="Left" Height="364" Margin="618,109,0,-30" VerticalAlignment="Top" Width="327" d:IsHidden="True">
                 <TextBox x:Name="SubjectNameTextBox" HorizontalAlignment="Left" Height="22" Margin="89,16,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="177"/>
@@ -123,7 +125,7 @@
                 <Button x:Name="AdminPanelBackEditTeacher" Content="Back" HorizontalAlignment="Left" Margin="89,218,0,0" VerticalAlignment="Top" Width="71" Height="24" Click="AdminPanelBackEditTeacher_Click"/>
                 <ComboBox x:Name="AdminTeacherIdComboboxEdit" HorizontalAlignment="Left" Margin="89,10,0,0" VerticalAlignment="Top" Width="177" SelectionChanged="AdminTeacherIdComboboxEdit_SelectionChanged"/>
             </Grid>
-            <Grid x:Name="AdminTeachersRemove" HorizontalAlignment="Left" Height="343" Margin="618,130,0,-30" VerticalAlignment="Top" Width="327">
+            <Grid x:Name="AdminTeachersRemove" HorizontalAlignment="Left" Height="343" Margin="618,130,0,-30" VerticalAlignment="Top" Width="327" d:IsHidden="True">
                 <Button x:Name="AdminPanelDeleteTeacher" Content="Delete" HorizontalAlignment="Left" Margin="195,72,0,0" VerticalAlignment="Top" Width="71" Height="24" Click="AdminPanelDeleteTeacher_Click"/>
                 <Label Content="Login:" HorizontalAlignment="Left" Margin="42,22,0,0" VerticalAlignment="Top"/>
                 <Button x:Name="AdminPanelBackDeleteTeacher" Content="Back" HorizontalAlignment="Left" Margin="89,72,0,0" VerticalAlignment="Top" Width="71" Height="24" Click="AdminPanelBackDeleteTeacher_Click"/>
@@ -229,7 +231,7 @@
                 </TabControl>
             </Grid>
         </Grid>
-        <Grid x:Name="Logining" Margin="0,0,-409,-83">
+        <Grid x:Name="Logining" Margin="0,0,-409,-83" d:IsHidden="True">
 
             <TextBox x:Name="Login" HorizontalAlignment="Left" Height="30" Margin="459,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="152" TabIndex="1"/>
             <Button Content="Войти" HorizontalAlignment="Left" Margin="415,287,0,0" VerticalAlignment="Top" Width="136" Height="45" FontSize="20"  TabIndex="3" Click="Entering"/>
